--- a/solar_app_html/static/index.html
+++ b/solar_app_html/static/index.html
@@ -397,7 +397,7 @@
   <div id="monthlyModal" class="modal" style="display:none;">
     <div class="modalCard">
       <div class="modalHeader">
-        <div style="font-weight:700;">Månedlig oversigt (2025)</div>
+        <div id="monthlyTitle" style="font-weight:700;">Månedlig oversigt</div>
         <button id="btnMonthlyClose" class="modalClose">Close</button>
       </div>
 
@@ -418,97 +418,155 @@
   </div>  
   <div id="side">
     <h1>Inputs</h1>
+    <h3>(Indsæt vejledning / dokumentation)</h3>
 
-    <div class="row">
-      <label>Årlig forbrug (kWh/år)</label>
-      <input id="annual_kwh" type="number" value="4200" step="100" min="0">
-    </div>
+    <details class="section" open>
+      <summary>Indstillinger for anlæg</summary>
+      <div class="body">
+        <div class="row">
+          <label><b>Årlig forbrug (kWh/år)</b></label>
+          <input id="annual_kwh" type="number" value="4200" step="100" min="0">
+          <label>Indtast dit årlige forbrug (husstand)</label>
+          <div class="hr"></div>
+        </div>
 
-    <div class="row">
-      <label>Solpanel størrelse (kWp)</label>
-      <input id="kwp" type="number" step="0.1" value="1.0" min="0">
-    </div>
+        <div class="row">
+          <label><b>Solpanel størrelse (kWp)</b></label>
+          <input id="kwp" type="number" step="0.1" value="1.0" min="0">
+          <label>Indtast størrelse for solpanel</label>
+          <div class="hr"></div>
+        </div>
 
-    <div class="row">
-      <label>Batteri kapacitet (kWh) (0 = intet batteri)</label>
-      <input id="batt_kwh" type="number" step="0.5" value="0" min="0">
-    </div>
+        <div class="row">
+          <label><b>Batteri kapacitet (kWh) (0 = intet batteri)</b></label>
+          <input id="batt_kwh" type="number" step="0.5" value="0" min="0">
+          <label>Indtast størrelse på batteripakke</label>
+          <div class="hr"></div>
+        </div>
+
+        <div class="row">
+          <label><b>Pris-scenarie</b></label>
+          <select id="price_scenario">
+            <option value="2025_real" selected>2025 (Historisk: elafgift 0,72 dkk/kWh)</option>
+            <option value="2026_projection">2026 (Fremskrevet: elafgift 0,01 dkk/kWh)</option>
+          </select>
+          <label>Vælg mellem:</label> 
+          <label>2025 Historiske priser med elafgift på <b>0.72 dkk/kWh</b> </label> 
+          <label>2026 Fremskrevede priser som er baseret på priser fra 2025 med sænket elafgift på <b>0.01 dkk/kWh</b></label>
+        </div>
+
+        <div class="row" id="row_elafgift_custom" style="display:none;">
+          <label>Custom elafgift (DKK/kWh)</label>
+          <input id="elafgift_custom" type="number" step="0.01" value="0.01" min="0">
+        </div>
+
+      </div>
+    </details>
 
     <details class="section">
       <summary>Avancerede indstillinger</summary>
       <div class="body">
+        <label>Herunder findes avancerede instillinger for solpanel og batteri. Disse indstillinger kan til en hvis grad ignoreres hvis der blot ønskes en overslagsberegning. Beregningen bliver mere retvisende hvis avancerede indstillinger er sat korrekt.</label>
 
-        <!-- PV advanced -->
-        <h4>Avancerede Solpanel indstillinger</h4>
-        <div class="row">
-          <label>Virkningsgrad (PR)</label>
-          <input id="pr" type="number" step="0.01" value="0.75" min="0" max="1.2">
-        </div>
+        <details class="section" open>
+          <summary>Avancerede Solpanel indstillinger</summary>
+          <div class="body">
+          <!-- PV advanced -->
 
-        <div class="row">
-          <label>Hældning (°)</label>
-          <input id="tilt" type="number" step="1" value="40">
-        </div>
+          <div class="row">
+            <label><b>Virkningsgrad (PR) (0.75 = 75%)</b></label>
+            <input id="pr" type="number" step="0.01" value="0.75" min="0" max="1.2">
+            <label>Virkningsgraden / Performance Ratio (PR) beskriver den overordnede effektivitet som solpanelet producerer elektricitet ved. Værdien vil typisk ligge mellem 0.75 til 0.85.</label>
+            <div class="hr"></div>
+          </div>
 
-        <div class="row">
-          <label>Retning (azimuth) (°)</label>
-          <input id="az" type="number" step="1" value="180">
-        </div>
+          <div class="row">
+            <label><b>Hældning (°)</b></label>
+            <input id="tilt" type="number" step="1" value="40">
+            <label>Tagets hældning har betydning for solpanelets effektivitet. Hældningen på dit tag kan eventuelt findes i plantegningerne for dit hus, eller kan måles manuelt</label>
+            <div class="hr"></div>
+          </div>
 
-        <div class="hr"></div>
+          <div class="row">
+            <label><b>Retning / azimuth (°) (180 = syd)</b></label>
+            <input id="az" type="number" step="1" value="180">
+            <label>Tagets retning / azimuth har betydning for solpanelets effektivitet. </label>
+            <label>Brug eventuelt værktøjet <b>"Mål retning / azimuth"</b> (nederst til venstre på kortet) til at bestemme denne vinkel på dit tag. Klik på værktøjet og derefter klik på tagryggen af dit hus - træk derefter pilen væk fra dit hus (helst mod syd) så den røde linje ligger langs tagryggen.</label>
+          </div>
 
-        <!-- Battery advanced -->
-        <h4>Avancerede Batteri indstillinger</h4>
-        <div class="row">
-          <label>Start SoC (0-1)</label>
-          <input id="soc_init" type="number" step="0.05" value="0.5" min="0" max="1">
-        </div>
+          </div>
+        </details>
+        
+        <details class="section" open>
+          <summary>Avancerede Batteri indstillinger</summary>
+          <div class="body">
+            <!-- Battery advanced -->
+          <div class="row">
+            <label><b>Start SoC (0-1) (0.5 = 50% opladt)</b></label>
+            <input id="soc_init" type="number" step="0.05" value="0.5" min="0" max="1">
+            <label>State of Charge (SoC) bestemmer batteriets opladningsniveau når simuleringen startes.</label>
+            <div class="hr"></div>
+          </div>
 
-        <div class="row">
-          <label>Minimum SoC (0-1)</label>
-          <input id="soc_min" type="number" step="0.05" value="0.1" min="0" max="1">
-        </div>
+          <div class="row">
+            <label><b>Minimum SoC (0-1) (0.1 = 10% opladt)</b></label>
+            <input id="soc_min" type="number" step="0.05" value="0.1" min="0" max="1">
+            <label>Ved at begrænse minimum-opladningsniveau kan batteriets levetid forlænges</label>
+            <div class="hr"></div>
+          </div>
 
-        <div class="row">
-          <label>Maksimal SoC (0-1)</label>
-          <input id="soc_max" type="number" step="0.05" value="0.9" min="0" max="1">
-        </div>
+          <div class="row">
+            <label><b>Maksimal SoC (0-1) (0.9 = 90% opladt)</b></label>
+            <input id="soc_max" type="number" step="0.05" value="0.9" min="0" max="1">
+            <label>Ved at begrænse maksimum-opladningsniveau kan batteriets levetid forlænges</label>
+            <div class="hr"></div>
+          </div>
 
-        <div class="row">
-          <label>Maksimal opladningseffekt (kW) (blank = uendelig)</label>
-          <input id="p_charge_kw" type="number" step="0.5" value="" min="0">
-        </div>
+          <div class="row">
+            <label><b>Maksimal opladningseffekt (kW) (blank = uendelig)</b></label>
+            <input id="p_charge_kw" type="number" step="0.5" value="" min="0">
+            <label>Den maksimale opladningseffekt beskriver den effekt som batteriet maksimalt kan oplades med. Denne værdi er typisk en begrænsning der er sat af solpanelets inverter.</label>
+            <div class="hr"></div>
+          </div>
 
-        <div class="row">
-          <label>Maksimal afladningseffekt (kW) (blank = uendelig)</label>
-          <input id="p_discharge_kw" type="number" step="0.5" value="" min="0">
-        </div>
+          <div class="row">
+            <label><b>Maksimal afladningseffekt (kW) (blank = uendelig)</b></label>
+            <input id="p_discharge_kw" type="number" step="0.5" value="" min="0">
+            <label>Den maksimale afladningseffekt beskriver den effekt som batteriet maksimalt kan aflades med. Denne værdi er typisk en begrænsning der er sat af solpanelets inverter.</label>
+            <div class="hr"></div>
+          </div>
 
-        <div class="row">
-          <label>Opladnings effektivitet (0-1)</label>
-          <input id="eta_c" type="number" step="0.01" value="0.95" min="0" max="1">
-        </div>
+          <div class="row">
+            <label><b>Opladnings effektivitet (0-1) (0.95 = 95%)</b></label>
+            <input id="eta_c" type="number" step="0.01" value="0.95" min="0" max="1">
+            <label>Opladnings effektivitet er den energi, der tilføres batteriet, divideret med den energi, der bruges af opladeren.</label>
+            <div class="hr"></div>
+          </div>
 
-        <div class="row">
-          <label>Afladnings effektivitet (0-1)</label>
-          <input id="eta_d" type="number" step="0.01" value="0.95" min="0" max="1">
-        </div>
+          <div class="row">
+            <label><b>Afladnings effektivitet (0-1) (0.95 = 95%)</b></label>
+            <input id="eta_d" type="number" step="0.01" value="0.95" min="0" max="1">
+            <label>Afladnings effektivitet er den energi, der leveres fra batteriet, divideret med den energi, der tappes fra batteriet.</label>
+          </div>
+
+          </div>
+        </details>
 
       </div>
     </details>
 
 
     <button id="btnSummary">Opdater oversigt</button>
-    <button id="btnMonthly">Månedlig oversigt (2025)</button>
+    <button id="btnMonthly">Månedlig oversigt</button>
 
     <div class="hr"></div>
     <h1>Outputs</h1>
     <div class="small"><b>Status:</b> <span id="status">Klik på kort for at vælge lokation. Tryk derefter på Opdater oversigt.</span></div>
     <div class="small"><b>Valgt koordinat:</b> <span id="coord">—</span></div>
 
-    <div id="summary">Ingen oversigt endnu.</div>
+    <div id="summary"></div>
     <div class="hr"></div>
-    <div id="simulationYear">Ingen årlig simulation kørt.</div>
+    <div id="simulationYear"></div>
 
     <div class="hr"></div>
     <h4 style="margin: 8px 0;">Lokalplaner</h4>
@@ -547,6 +605,8 @@
   const etaCEl = document.getElementById("eta_c");
   const etaDEl = document.getElementById("eta_d");
 
+  const priceScenarioEl = document.getElementById("price_scenario");
+
   let selected = null;
   let marker = null;
 
@@ -561,7 +621,24 @@
     if (!r.ok) throw new Error(await r.text());
     return await r.json();
   }
-  
+
+  function getDisplayYear() {
+    const sc = priceScenarioEl ? priceScenarioEl.value : null;
+    if (sc === "2025_real") return 2025;
+    if (sc === "2026_projection") return 2026;
+    return 2025; // fallback
+  }
+
+  function refreshYearLabels() {
+    const y = getDisplayYear();
+
+    const titleEl = document.getElementById("monthlyTitle");
+    if (titleEl) titleEl.textContent = `Månedlig oversigt (${y})`;
+
+    const btnEl = document.getElementById("btnMonthly");
+    if (btnEl) btnEl.textContent = `Månedlig oversigt (${y})`;
+  }
+
   function addBatteryParams(params) {
     params.set("battery_kwh", battKwhEl.value);
     params.set("soc_init", socInitEl.value);
@@ -629,7 +706,7 @@
         datasets: [
           { label: "Basisomkostninger (uden Solpanel) (DKK)", data: m.baseline_cost_dkk },
           { label: "Omkostninger med Solpanel (DKK)", data: m.system_cost_dkk },
-          { label: "Besparelser (DKK)", data: m.savings_dkk }
+          { label: "Estimerede besparelser (DKK)", data: m.savings_dkk }
         ]
       },
       options: {
@@ -644,7 +721,7 @@
 
   function renderSimulationYear(data) {
     const s = data.summary;
-    const year = data.inputs.year;
+    const year = getDisplayYear();
 
     function fmt(x, digits = 2) {
       if (x === null || x === undefined || Number.isNaN(Number(x))) return "—";
@@ -658,7 +735,7 @@
     simYearEl.innerHTML = `
       <details class="section">
         <summary>
-          Yearly simulation (${year})
+          Årlig simulation (${year})
           <span class="badge">${fmt(s.savings_dkk)} DKK</span>
         </summary>
         <div class="body">
@@ -740,7 +817,7 @@
             <div class="body">
               <div class="row2">
                 <div class="k">Årlig total (TMY/PVGIS)</div>
-                <div class="v">${yearKwh} kWh (år ${escapeHtml(String(s.year))})</div>
+                <div class="v">${yearKwh} kWh (år ${getDisplayYear()})</div>
               </div>
             </div>
           </details>
@@ -1237,7 +1314,11 @@
         const ll2 = map.layerPointToLatLng(p2);
 
         if (!perpTick) {
-          perpTick = L.polyline([ll1, ll2], { weight: 3, opacity: 0.9 }).addTo(map);
+          perpTick = L.polyline([ll1, ll2], {
+            color: "red",
+            weight: 3,
+            opacity: 0.9
+          }).addTo(map);
         } else {
           perpTick.setLatLngs([ll1, ll2]);
         }
@@ -1246,7 +1327,10 @@
 
       const lineLatLngs = [startLatLng, endLatLng];
       if (!arrowLine) {
-        arrowLine = L.polyline(lineLatLngs, { weight: 3 }).addTo(map);
+        arrowLine = L.polyline(lineLatLngs, {
+          color: "#111",
+          weight: 3
+        }).addTo(map);
       } else {
         arrowLine.setLatLngs(lineLatLngs);
       }
@@ -1319,7 +1403,7 @@
   async function init() {
     const extraOverlays = {}; // name -> Leaflet layer
     const center = await getJSON("/api/center");
-    plansEl.innerHTML = "<div class='small'>Tryk “Refresh summary” for at se planer og vejledning.</div>";
+    plansEl.innerHTML = "<div class='small'>Tryk “Opdater oversigt” for at se planer og vejledning.</div>";
     // Map
     const map = L.map("map").setView([center.lat, center.lon], 10);
 
@@ -1328,7 +1412,7 @@
 
     const azTool = makeAzimuthTool(map, azEl, statusEl, (enabled) => {
       if (!azBtn) return;
-      azBtn.textContent = enabled ? "Stop azimuth" : "Mål azimuth";
+      azBtn.textContent = enabled ? "Stop retning / azimuth" : "Mål retning / azimuth";
       azBtn.classList.toggle("active", enabled);
     });
 
@@ -1336,7 +1420,7 @@
       onAdd: function() {
         const btn = L.DomUtil.create("button");
         btn.type = "button";
-        btn.textContent = "Mål azimuth";
+        btn.textContent = "Mål retning / azimuth";
         btn.className = "az-btn";
         azBtn = btn;
 
@@ -1351,7 +1435,6 @@
     });
 
     map.addControl(new AzControl({ position: "bottomleft" }));
-
 
     // ----- Base layers -----
 
@@ -1460,11 +1543,11 @@
     // Buttons
     document.getElementById("btnSummary").onclick = async () => {
       if (!selected) {
-        statusEl.textContent = "Click map to set location first.";
+        statusEl.textContent = "Klik på kort for at vælge lokation.";
         return;
       }
 
-      statusEl.textContent = "Computing all results…";
+      statusEl.textContent = "Beregner resultater…";
       
       const params = new URLSearchParams({
         lat: selected.lat,
@@ -1475,6 +1558,8 @@
         az: azEl.value,
         annual_kwh: annualKwhEl.value,
       });
+
+      params.set("price_scenario", priceScenarioEl.value);
 
       try {
         bevaringskodeEl.innerHTML = "<div class='small'>Looking up Bevaringskode…</div>";
@@ -1510,6 +1595,7 @@
           annual_kwh: annualKwhEl.value,
         });
 
+        yearParams.set("price_scenario", priceScenarioEl.value);
         addBatteryParams(yearParams);
 
         lastYearSim = await getJSON(`/api/simulate_year?${yearParams.toString()}`);
@@ -1550,6 +1636,12 @@
         console.error(err);
       }
     };
+
+    priceScenarioEl.addEventListener("change", () => {
+      refreshYearLabels();
+    });
+
+    refreshYearLabels();
 
   }
 
